[package]
name = "create-co-write-for-tgdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
iter_tools = "0.1"
once_cell = "1.13.0"
reqwest = { version = "0.11", features = ["json"]}
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tera = "1.16"
tokio = { version = "1.20", features = ["full"] }
